infer/tests/codetoanalyze/cpp/errors/methods/virtual_methods.cpp
../../frontend/methods/virtual_methods.cpp